# SynQt

./: AUTHORS  CLA.md  CONTRIBUTING.md  Doxyfile  NOTICE  README.md  mkdocs.yml  requirements.txt
benchmarks/capstone/: CMakeLists.txt  bench_capstone.cpp  capstone.rep  run-bench.sh
benchmarks/edge/: CMakeLists.txt  bench_edge.cpp  run-bench.sh
benchmarks/edge/verify/: run-http-bench.mjs
benchmarks/fanout/: CMakeLists.txt  bench_fanout.cpp  fanout.rep  run-bench.sh
benchmarks/mesh/: CMakeLists.txt  bench_mesh.cpp  bench_mesh.rep  gen-certs.sh  run-bench.sh
benchmarks/persistence/: CMakeLists.txt  bench_persistence.cpp  run-bench.sh
benchmarks/sessions/: CMakeLists.txt  bench_sessions.cpp  run-bench.sh
benchmarks/transport/: CMakeLists.txt  bench.rep  bench_transport.cpp  run-bench.sh
docs/: csp.md  (+30 more)
src/client/: CMakeLists.txt  browserhistory.cpp  browserhistory.h  clientlogging.cpp  clientlogging.h  clientupdate.cpp  clientupdate.h  qmlpalette.cpp  qmlpalette.h  remotepageloader.cpp  remotepageloader.h  replicaregistry.cpp  replicaregistry.h  resumepath.cpp  resumepath.h  routepattern.cpp  routepattern.h  router.cpp  router.h  serveraccessor.cpp  serveraccessor.h  session.cpp  session.h  synclient.cpp  synclient.h  synclientconfig.h
src/consumer/: CMakeLists.txt  connectpointresolver.cpp  connectpointresolver.h  consumerbase.cpp  consumerbase.h  consumerfactory.cpp  consumerfactory.h  promise.cpp  promise.h
src/providers/: CMakeLists.txt  cache.cpp  cache.h  cachefactory.cpp  cachefactory.h  db.cpp  db.h  documentfactory.cpp  documentfactory.h  http.cpp  http.h  icacheprovider.h  idocumentprovider.h  ipersistenceprovider.h  jobs.cpp  jobs.h  memorycacheprovider.cpp  memorycacheprovider.h  memorydocumentprovider.cpp  memorydocumentprovider.h  mongoprovider.cpp  mongoprovider.h  mysqlprovider.cpp  mysqlprovider.h  persistencefactory.cpp  persistencefactory.h  postgresprovider.cpp  postgresprovider.h  providerconfig.h  providerregistry.cpp  providerregistry.h  redisprovider.cpp  redisprovider.h  sqlconnectionpool.cpp  sqlconnectionpool.h  sqliteprovider.cpp  sqliteprovider.h  sqlsupport.cpp  sqlsupport.h
src/service/: CMakeLists.txt  caller.cpp  caller.h  connectpointhost.cpp  connectpointhost.h  edgereplyhandler.cpp  edgereplyhandler.h  entityruntime.cpp  entityruntime.h  identityconfig.h  identitymapping.h  identityprovider.cpp  identityprovider.h  identityservice.cpp  identityservice.h  jwksverifier.cpp  jwksverifier.h  meshclient.cpp  meshclient.h  meshpeer.h  meshserver.cpp  meshserver.h  oauthbackend.cpp  oauthbackend.h  pagesedgesource.cpp  pagesedgesource.h  pageseed.h  pagesservice.cpp  pagesservice.h  pagestore.cpp  pagestore.h  sessionmanager.cpp  sessionmanager.h  stubidentityserver.cpp  stubidentityserver.h  topology.cpp  topology.h  webedge.cpp  webedge.h  webedgeconfig.h
src/service/contracts/: Pages.syn
src/transport/: CMakeLists.txt  routepattern.cpp  routepattern.h  websockettransport.cpp  websockettransport.h
tests/consumer-facade/: CMakeLists.txt  run-consumer.sh  tst_consumer.cpp
tests/consumer-facade/client/: Main.qml
tests/consumer-facade/shared/: Widget.syn
tests/custom-provider/: CMakeLists.txt  run-customprovider.sh  tst_customprovider.cpp
tests/fix1-auction/: CMakeLists.txt  README.md  gen-cert.sh  run-fix1.sh  tst_fix1.cpp
tests/fix1-auction/bundle/: index.html
tests/fix2-arena/: CMakeLists.txt  README.md  gen-cert.sh  run-fix2.sh  tst_fix2.cpp
tests/fix2-arena/bundle/: index.html
tests/fix2-arena/shared/: Arena.syn
tests/fix2-arena/web/: Arena.qml  World.qml
tests/fix3-stall/: CMakeLists.txt  gen-cert.sh  run-fix3.sh  tst_fix3.cpp
tests/fix3-stall/bundle/: index.html
tests/m0-transport/: CMakeLists.txt  CMakePresets.json  README.md
tests/m0-transport/client/: CMakeLists.txt  Main.qml  m0controller.cpp  m0controller.h  main.cpp
tests/m0-transport/edge/: CMakeLists.txt  main.cpp  spikesource.cpp  spikesource.h
tests/m0-transport/shared/: spike.rep  websocketiodevice.cpp  websocketiodevice.h
tests/m0-transport/verify/: package-lock.json  package.json  run-m0.sh  run-mt.sh  verify-mt.mjs  verify.mjs
tests/m1-contract/: CMakeLists.txt  CMakePresets.json  README.md  client_main.cpp  owner_main.cpp  run-m1.sh  tst_m1.cpp
tests/m1-contract/shared/: Catalog.syn  Todo.syn
tests/m2-transport/: CMakeLists.txt  CMakePresets.json  README.md  m2.rep  run-m2.sh  tst_m2.cpp
tests/m3-mesh/: CMakeLists.txt  CMakePresets.json  README.md  gen-certs.sh  mesh.rep  run-m3.sh  tst_m3.cpp
tests/m4-topology/: CMakeLists.txt  CMakePresets.json  README.md  gen-certs.sh  run-m4.sh  tst_m4.cpp
tests/m4-topology/a/: Thing.qml
tests/m4-topology/shared/: Thing.syn
tests/m5-webedge/: CMakeLists.txt  CMakePresets.json  README.md  gen-cert.sh  run-m5.sh  tst_m5.cpp
tests/m5-webedge/bundle/: index.html
tests/m5-webedge/edge/: Greeting.qml
tests/m5-webedge/shared/: Greeting.syn
tests/m6-client/: CMakeLists.txt  README.md  gen-cert.sh  run-m6.sh  tst_m6.cpp
tests/m6-client/app/: CMakeLists.txt
tests/m6-client/bundle/: index.html
tests/m6-client/client/: Main.qml  main.cpp
tests/m6-client/edge/: main.cpp
tests/m6-client/shared/: Counter.syn
tests/m6-client/verify/: package-lock.json  package.json  verify.mjs
tests/m6-client/web/: Counter.qml
tests/m6-clientupdate/: CMakeLists.txt  run-m6u.sh  tst_clientupdate.cpp  tst_qmlsyntax.cpp
tests/m7-caller/: CMakeLists.txt  README.md  gen-cert.sh  run-m7.sh  tst_m7.cpp
tests/m7-caller/bundle/: index.html
tests/m7-caller/database/: Items.qml
tests/m7-caller/shared/: Items.syn  Todo.syn
tests/m7-caller/web/: Todo.qml
tests/m8-auth/: CMakeLists.txt  README.md  gen-cert.sh  run-m8.sh  tst_m8.cpp
tests/m8-auth/auth/: Identity.qml  Session.qml
tests/m8-auth/bundle/: index.html
tests/m8-auth/shared/: Identity.syn  Session.syn
tests/m9-providers/: CMakeLists.txt  run-m9.sh  tst_m9.cpp
tests/prov4-runtime/: CMakeLists.txt  run-prov4.sh  tst_prov4.cpp
tests/remote-pages/: CMakeLists.txt  run-remotepages.sh  tst_pagestore.cpp  tst_remotepage.cpp
(+192 files in other folders)
